# projeto-elt-satc

./: .env.sample  README.md  pyproject.toml
astro/: .env.sample  Dockerfile  README.md  packages.txt  requirements.txt  sample.env
astro/.astro/: config.yaml
astro/dags/: bronze_to_silver.py  complete_elt_pipeline.py  landing_to_bronze.py  sqlserver_to_adls.py
docker/sqlserver/: docker-compose.yaml
iac/adls/: .gitignore  .terraform.lock.hcl  README.md  variables.tf
notebooks/: spark_explorer.ipynb
test/: test_connection_adls.py  test_connection_sqlserver.py  test_spark_adls_connection.py
